# agent-bridge

./: .gitignore  LICENSE  README.md
firmware/: CMakeLists.txt  README.md  agent_bridge.c  agent_bridge.h
firmware/auth/: agent_auth.c  transport_tls.c
firmware/devices/: dht22.c  relay.c  relay.h  servo.h
firmware/examples/: auth_demo.py  dify_bridge.py  fan_bridge_example.c  mcp_server.py  mqtt_bridge.py  simulator.py
firmware/ota/: agent_ota.h
firmware/transport/: transport_ble.c  transport_ble.h  transport_coap.c  transport_dify_http.c  transport_dify_http.h  transport_espnow.h  transport_modbus.h  transport_mqtt_ha.c  transport_tcp_raw.c  transport_webconsole.c
firmware/xiaozhi-fan/: CMakeLists.txt  _build.bat  _build.ps1  sdkconfig.defaults  sdkconfig.defaults.esp32s3
firmware/xiaozhi-fan/components/agent_bridge/: CMakeLists.txt  agent_bridge.c  agent_bridge.h
firmware/xiaozhi-fan/components/agent_bridge/auth/: agent_auth.h  transport_tls.h
firmware/xiaozhi-fan/components/agent_bridge/devices/: dht22.h  pwm_fan.c  pwm_fan.h  rgb_led.c  rgb_led.h  servo.c
firmware/xiaozhi-fan/components/agent_bridge/ota/: agent_ota.c
firmware/xiaozhi-fan/components/fan_uart/: CMakeLists.txt  uart_proto.c  uart_proto.h
firmware/xiaozhi-fan/docs/: pitfalls.md
firmware/xiaozhi-fan/main/: CMakeLists.txt  application.cc  idf_component.yml  system_info.cc  transport_mcp.cpp  transport_mcp.h  uart_proto.c
firmware/xiaozhi-fan/main/audio/: audio_service.cc
firmware/xiaozhi-fan/main/display/: lcd_display.cc
firmware/xiaozhi-fan/main/stubs/: uart_eth_modem.h
(+16 files in other folders)
